--- a/TP1.html
+++ b/TP1.html
@@ -42,7 +42,7 @@
                <h1>Accueil</h1> 
             </header>
             <article data-role="content">
-                    <ul data-role="listview" data-inset="true" id=lequipe>
+                    <ul data-role="listview" data-filter="true" data-inset="true" id=lequipe>
                            
                     </ul>                
                 <p><a href="#mypanel">Afficher le panneau</a></p>
