--- a/TP1.html
+++ b/TP1.html
@@ -43,6 +43,48 @@
             </header>
             <article data-role="content">
                     <div data-role="collapsible-set">
+                            <div data-role="collapsible" data-theme="e" data-content-theme="a">
+                                <h3><img src="images/de.png" /> Allemagne</h3>
+                                <p>Année d'adhésion : 1957</p>
+                                <div data-role="collapsible" data-theme="b" data-content-theme="e">
+                                    <h3>+ d'infos</h3>
+                                    <p>Capitale : Berlin</p>
+                                    <p>Superficie : 356 900 km<sup>2</sup></p>
+                                    <p>Nombre d'habitants : 82,500 millions</p>
+                                </div>
+                            </div>
+                            <div data-role="collapsible" data-theme="e" data-content-theme="a">
+                                <h3><img src="images/at.png" /> Autriche</h3>
+                                <p>Année d'adhésion : 1995</p>
+                                <div data-role="collapsible" data-theme="b" data-content-theme="e">
+                                    <h3>+ d'infos</h3>
+                                    <p>Capitale : Vienne</p>
+                                    <p>Superficie : 83 900 km<sup>2</sup></p>
+                                    <p>Nombre d'habitants : 8,151 millions</p>
+                                </div>
+                            </div>
+                            <div data-role="collapsible" data-theme="e" data-content-theme="a">
+                                <h3><img src="images/be.png" /> Belgique</h3>
+                                <p>Année d'adhésion : 1957</p>
+                                <div data-role="collapsible" data-theme="b" data-content-theme="e">
+                                    <h3>+ d'infos</h3>
+                                    <p>Capitale : Bruxelles</p>
+                                    <p>Superficie : 30 500 km<sup>2</sup></p>
+                                    <p>Nombre d'habitants : 11,071 millions</p>
+                                </div>
+                            </div>
+                            <div data-role="collapsible" data-theme="e" data-content-theme="a">
+                                <h3><img src="images/bg.png" /> Bulgarie</h3>
+                                <p>Année d'adhésion : 2007</p>
+                                <div data-role="collapsible" data-theme="b" data-content-theme="e">
+                                    <h3>+ d'infos</h3>
+                                    <p>Capitale : Sofia</p>
+                                    <p>Superficie : 110 910 km<sup>2</sup></p>
+                                    <p>Nombre d'habitants : 7,707 millions</p>
+                                </div>
+                            </div>
+                        </div>
+                    <div data-role="collapsible-set">
                         <div data-role="collapsible">
                             <h3>En voir plus</h3>
                             <p>Hello toto</p>
